--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "chai-fs": "^0.1.0",
     "harmonize": "^1.4.4",
     "metalsmith": "^2.0.1",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "power-assert": "^1.0.1"
   },
   "dependencies": {
     "async": "^1.4.2",
