--- a/package.json
+++ b/package.json
@@ -24,18 +24,17 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "chai": "^1.10.0",
+    "chai": "^3.5.0",
     "chai-fs": "^0.1.0",
-    "harmonize": "^1.4.4",
     "metalsmith": "^2.0.1",
     "mocha": "^2.3.3",
     "power-assert": "^1.0.1"
   },
   "dependencies": {
-    "async": "^1.4.2",
-    "cheerio": "^0.19.0",
+    "async": "^2.0.1",
+    "cheerio": "^0.20.0",
     "debug": "^2.2.0",
-    "html-validator": "0.0.8",
+    "html-validator": "^1.0.0",
     "jsonfile": "^2.2.2",
     "md5": "^2.0.0",
     "request": "^2.62.0",
