Add ignore option.

--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-fs": "^1.0.0",
+    "chai": "^4.1.2",
+    "chai-fs": "^2.0.0",
     "metalsmith": "^2.3.0",
-    "mocha": "^3.2.0",
-    "power-assert": "^1.4.2"
+    "mocha": "^5.0.0",
+    "power-assert": "^1.4.4"
   },
   "dependencies": {
-    "async": "^2.1.4",
-    "cheerio": "^0.22.0",
-    "debug": "^2.6.0",
-    "html-validator": "^2.2.0",
-    "jsonfile": "^2.4.0",
+    "async": "^2.6.0",
+    "cheerio": "^1.0.0-rc.2",
+    "debug": "^3.1.0",
+    "html-validator": "^2.2.3",
+    "jsonfile": "^4.0.0",
     "md5": "^2.2.1",
-    "request": "^2.79.0",
+    "request": "^2.83.0",
     "underscore": "^1.8.3"
   }
 }
